# next_dental_api

./: .env  .gitignore  README.md  data.db  main.py  pyproject.toml  requirements.txt
app/: __init__.py  alembic.ini  data.db  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 0569010285b7_migrations01.py  1774505f0076_migration_message.py  36aa459d88e4_migration_message.py  b21f1df2e7b3_mibration_01.py
app/api/auth/: __init__.py  auth_route.py  authentication.py  route.py  utils.py
app/api/models/: __init__.py  appointment.py  assets.py  dental_types.py  employee.py  events.py  patient.py  permissions.py  posts.py  user.py
app/api/routes/: assets_route.py  patient.py  patients.py  patients_route.py  posts_route.py  users.py  users_route.py
app/api/schemas/: __init__.py  address.py  appointment.py  create_assets.py  dental_schemas.py  employee.py  events.py  patient.py  posts.py  token_schema.py  user.py
app/core/: __init__.py  config.py  database.py  deps.py  security.py  utils.py
app/core/services/: employee.py  patient.py  user.py
app/sql/: roles.sql
db/: config.py  database.py
models/: employee.py  user.py
routes/: route.py
