[tool.poetry]
name = "next-dental-api"
version = "0.1.0"
description = "Dental clinic system for Tana Dental Clinic"
authors = ["mgemoraw <meng.get4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
